# omt07l

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: composer.md  conductor.md  mapper.md  visualist.md
.claude/skills/audio-reactive-viz/: SKILL.md
.claude/skills/freq-to-params/: SKILL.md
.claude/skills/live-mapping/: SKILL.md
config/: osc_map.yaml
config/palettes/: porcelain_blue.yaml  shattered_glass.yaml
docs/: architecture.md  osc-protocol.md  session-log.md  session-summary.md  testing-guide.md  windows-setup.md
docs/learning/: 00-overview.md
docs/studies/: porcelain_blue.md  shattered_glass.md
mcp/hydra/: README.md  pyproject.toml
mcp/hydra/scripts/: preview_porcelain_blue.py  preview_sketch.py
mcp/hydra/src/hydra_mcp/: __init__.py  __main__.py  server.py  ws_bridge.py
mcp/hydra/src/hydra_mcp/sketches/: cardioid_breath.js  default.js  escape_rings.js  iterate_bloom.js  julia_live.js  liquid_feedback.js  mandelbrot_voice.js  metaball_orbit.js  morph_blob.js  porcelain_blue_preview.js  shattered_glass_preview.js  voronoi_cells.js
mcp/hydra/tests/: test_bridge.py  test_ws_bridge_outbound.py
mcp/hydra/web/: client.js  config.html  index.html
mcp/supercollider/: README.md
mcp/touchdesigner/: README.md
sc/bus/: control_routes.scd  osc_routes.scd
sc/sessions/: 00_quickstart.scd
sc/synthdefs/: analyzer.scd
scripts/: doctor.sh  start_stack.sh
td/projects/: README.md
