[project]
name = "hydra-mcp"
version = "0.1.0"
description = "MCP server + WebSocket bridge para Hydra (omt07l)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-osc>=1.9.0",
    "websockets>=13.0",
    "aiohttp>=3.10",
    "pyyaml>=6.0",
]

[project.scripts]
hydra-mcp = "hydra_mcp.__main__:main"
hydra-bridge = "hydra_mcp.__main__:bridge_only"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hydra_mcp"]
